--- a/limits-service.properties
+++ b/limits-service.properties
@@ -1,2 +1,4 @@
 limits-service.minimum = 8
 limits-service.maximum = 888
+
+spring.cloud.config.server.git.uri = /Users/samg.zun/Documents/References/Udemy/spring-microservices-mine
