--- a/spring-cloud-config-server/src/main/resources/application.properties
+++ b/spring-cloud-config-server/src/main/resources/application.properties
@@ -3,3 +3,4 @@ server.port = 8888
 
 spring.cloud.config.server.git.uri = file:///Users/samg.zun/Documents/References/Udemy/spring-microservices-mine
 spring.cloud.config.server.git.uri.force-pull = true
+spring.cloud.config.server.git.uri.default-label = section-4v2
